5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1771_1577.log
== SUBMITION (2019-05-23 18:36:43) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
t=arange(N)
d=zeros(N)
d(t)=a*t**2+v0t/2
print(t)
print(d)
-- EXECUTION TIME:
0.202436
-- ERROR:
  File "/home/codebench/codes/1771/1577/main.py", line 7
    d(t)=a*t**2+v0t/2
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:36:45) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
t=arange(N)
d=zeros(N)
d(t)=a*t**2+v0t/2
print(t)
print(d)
-- ERROR:
File "XXXX", line 7
    d(t)=a*t**2+v0t/2
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:36:59) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
t=arange(N)
d=zeros(N)
d(t)=a*t**2+v0t//2
print(t)
print(d)
-- ERROR:
File "XXXX", line 7
    d(t)=a*t**2+v0t//2
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:37:05) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
t=arange(N)
d=zeros(N)
print(t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:41:03) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
t=arange(5)
d=zeros(1,dtype=float)
print(t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:41:43) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
t=arange(0)
d=zeros(5,dtype=float)
print(t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:09:11) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
vt=arange(N)
vd=zeros(N)
vd=((a*t**2)/2)+vo*t
print(vd)

-- EXECUTION TIME:
0.442635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1577/main.py", line 7, in <module>
    vd=((a*t**2)/2)+vo*t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:09:36) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
vt=arange(N)
vd=zeros(N)
vd=((a*vt**2)/2)+vo*vt
print(vd)

-- EXECUTION TIME:
0.335548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1577/main.py", line 7, in <module>
    vd=((a*vt**2)/2)+vo*vt
NameError: name 'vo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:09:40) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
vt=arange(N)
vd=zeros(N)
vd=((a*vt**2)/2)+vo*vt
print(vd)

-- EXECUTION TIME:
0.396046
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1577/main.py", line 7, in <module>
    vd=((a*vt**2)/2)+vo*vt
NameError: name 'vo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:09:53) 
-- CODE:
from numpy import*
a=float(input("digite a aceleracao:"))
v0=float(input("digite a velocidade inicial:"))
N=int(input("digite um numero N:"))
vt=arange(N)
vd=zeros(N)
vd=((a*vt**2)/2)+v0*vt
print(vd)

-- EXECUTION TIME:
0.447725
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
